--- a/app/views/admin/roles/index.html.erb
+++ b/app/views/admin/roles/index.html.erb
@@ -23,7 +23,7 @@
 		</td>
 		<td>
 			<% if current_worker.destroy_role_access_is_given? %>
-				<%= link_to admin_role_path(role), method: :delete, data: { confirm: 'Вы уверены?' } do %>
+				<%= link_to admin_role_path(role), method: :delete, id: "role/#{role.id}", data: { confirm: 'Вы уверены?' } do %>
 					<i class="circular inverted red trash alternate outline icon"></i>
 				<% end %>
 			<% end %>
