#63 Написал фабрику для должности и сотрудника.Подключил очистку б.д перед тестированием

--- a/app/views/admin/workers/_form.html.erb
+++ b/app/views/admin/workers/_form.html.erb
@@ -27,6 +27,6 @@
 </p>
 
 <p>
-	<%= f.submit "Создать сотрудника", class:"ui teal button" %>
+	<%= f.submit "Подтвердить", class:"ui teal button" %>
 </p>
 <% end %>
