Реализовал кнопку Назад в admin/orders/show

--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -36,3 +36,5 @@
   <h3>Add a comment:</h3>
   <%= render 'admin/comments/form' %>
 </div>
+<br>
+<%= link_to "Назад", admin_orders_path, class: "btn btn-info" %>
