--- a/app/views/admin/orders/index.html.erb
+++ b/app/views/admin/orders/index.html.erb
@@ -5,7 +5,7 @@
 		<div>
 			<h3>Все заказы</h3>
 			<div>
-				<%= link_to "Все заказы", admin_orders_path %>
+				<%= link_to "Все заказы", admin_orders_path, id: 'all_orders' %>
 				(<%= Order.all.count %>)<br>
 			</div>
 		</div>
@@ -14,17 +14,17 @@
 	<div class="column">
 		<div>
 			<H3>Оператор</H3>
-			<%= link_to "Новые", admin_orders_path(status:'new_order') %>
+			<%= link_to "Новые", admin_orders_path(status:'new_order'), id: 'new_order' %>
 			(<%= Order.where(status: :new_order).count %>)<br>
 		</div>
 
 		<div>
-			<%= link_to "Выяснить", admin_orders_path(status:'find_out') %>
+			<%= link_to "Выяснить", admin_orders_path(status:'find_out'), id: 'find_out' %>
 			(<%= Order.where(status: :find_out).count %>)<br>
 		</div>
 
 		<div>
-			<%= link_to "Отсроченный", admin_orders_path(status:'deferred') %>
+			<%= link_to "Отсроченный", admin_orders_path(status:'deferred'), id: 'deferred' %>
 			(<%= Order.where(status: :deferred).count %>)<br>
 		</div>
 
@@ -34,42 +34,42 @@
 		<div>
 			<h3>Склад</h3>
 			<div>
-				<%= link_to "Подтверждённый", admin_orders_path(status:'confirmed') %>
+				<%= link_to "Подтверждённый", admin_orders_path(status:'confirmed'), id: 'confirmed' %>
 				(<%= Order.where(status: :confirmed).count %>)<br>
 			</div>
 
 			<div>
-				<%= link_to "Сборка заказа", admin_orders_path(status:'assemblage') %>
+				<%= link_to "Сборка заказа", admin_orders_path(status:'assemblage'), id: 'assemblage' %>
 				(<%= Order.where(status: :assemblage).count %>)<br>
 			</div>
 
 			<div>
-				<%= link_to "Подготовленный", admin_orders_path(status:'prepared') %>
+				<%= link_to "Подготовленный", admin_orders_path(status:'prepared'), id: 'prepared' %>
 				(<%= Order.where(status: :prepared).count %>)<br>
 			</div>
 
 			<div>
-				<%= link_to "Отправленный", admin_orders_path(status:'sent') %>
+				<%= link_to "Отправленный", admin_orders_path(status:'sent'), id: 'sent' %>
 				(<%= Order.where(status: :sent).count %>)<br>
 			</div>
 
 			<div>
-				<%= link_to "Врученный", admin_orders_path(status:'handed_in') %>
+				<%= link_to "Врученный", admin_orders_path(status:'handed_in'), id: 'handed_in' %>
 				(<%= Order.where(status: :handed_in).count %>)<br>
 			</div>
 
 			<div>
-				<%= link_to "Вручен и оплачен", admin_orders_path(status:'handed_and_paid') %>
+				<%= link_to "Вручен и оплачен", admin_orders_path(status:'handed_and_paid'), id: 'handed_and_paid' %>
 				(<%= Order.where(status: :handed_and_paid).count %>)<br>
 			</div>
 
 			<div>
-				<%= link_to "Возврат", admin_orders_path(status:'return') %>
+				<%= link_to "Возврат", admin_orders_path(status:'return'), id: 'return' %>
 				(<%= Order.where(status: :return).count %>)<br>
 			</div>
 
 			<div>
-				<%= link_to "Возврат получен", admin_orders_path(status:'refund_received') %>
+				<%= link_to "Возврат получен", admin_orders_path(status:'refund_received'), id: 'refund_received' %>
 				(<%= Order.where(status: :refund_received).count %>)<br>
 			</div>
 		</div>
@@ -79,17 +79,17 @@
 		<div>
 			<h3>Напоминания</h3>
 			<div>
-				<%= link_to "Доставлен", admin_orders_path(status:'delivered') %>
+				<%= link_to "Доставлен", admin_orders_path(status:'delivered'), id: 'delivered' %>
 				(<%= Order.where(status: :delivered).count %>)<br>
 			</div>
 
 			<div>
-				<%= link_to "Напоминание 1", admin_orders_path(status:'reminder_1') %>
+				<%= link_to "Напоминание 1", admin_orders_path(status:'reminder_1'), id: 'reminder_1' %>
 				(<%= Order.where(status: :reminder_1).count %>)<br>
 			</div>
 
 			<div>
-				<%= link_to "Напоминание 2", admin_orders_path(status:'reminder_2') %>
+				<%= link_to "Напоминание 2", admin_orders_path(status:'reminder_2'), id: 'reminder_2' %>
 				(<%= Order.where(status: :reminder_2).count %>)<br>
 			</div>
 		</div>
@@ -99,17 +99,17 @@
 		<div>
 			<h3>Проблемные</h3>
 			<div>
-				<%= link_to "Не подтверждён", admin_orders_path(status:'unconfirmed') %>
+				<%= link_to "Не подтверждён", admin_orders_path(status:'unconfirmed'), id: 'unconfirmed' %>
 				(<%= Order.where(status: :unconfirmed).count %>)<br>
 			</div>
 
 			<div>
-				<%= link_to "Отказ", admin_orders_path(status:'rejection') %>
+				<%= link_to "Отказ", admin_orders_path(status:'rejection'), id: 'rejection' %>
 				(<%= Order.where(status: :rejection).count %>)<br>
 			</div>
 
 			<div>
-				<%= link_to "Розыскивается", admin_orders_path(status:'wanted') %>
+				<%= link_to "Розыскивается", admin_orders_path(status:'wanted'), id: 'wanted' %>
 				(<%= Order.where(status: :wanted).count %>)<br>
 			</div>
 		</div>
