--- a/app/views/admin/orders/_form.html.erb
+++ b/app/views/admin/orders/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with scope: :query, url: admin_check_params_path, method: :get, local: true do |f| %>
+<%= form_with url: admin_check_params_path, method: :get, local: true do |f| %>
 	<br>
 	<div class="row">
 		<div class="col">
