#74 Исправил баги и добавил стили к комментариям

--- a/app/views/admin/comments/_comment.html.erb
+++ b/app/views/admin/comments/_comment.html.erb
@@ -1,8 +1,14 @@
-<li>
-  <p>
-    By:<strong><%= comment.worker.nickname %></strong> 
-  </p>
-  <p>
-    <%= comment.body %>
-  </p>
-</li>
+<!-- <li class="text-info">
+	<p class="text-success">
+		<b class="text-warning "><%= comment.worker.role.name %>:</b>
+		<strong class="text-danger"><%= comment.worker.nickname %></strong>
+		<%= comment.body %></p>
+	</li> -->
+	
+<tr>
+	<td><%= comment.worker.role.name %></td>
+	<td><%= comment.worker.nickname %></td>
+	<td><%= comment.body %></td>
+	<td><%= comment.created_at.localtime.strftime("%H:%M") %></td>
+</tr>
+
