--- a/app/views/admin/orders/index.html.erb
+++ b/app/views/admin/orders/index.html.erb
@@ -176,7 +176,7 @@
         <% if order.comments.present?%>
 			<th><b><%= link_to admin_order_path(order) do %>
 			<i class="large green comment icon"></i>
-			<% end %></b></th>
+			<% end %></b></th>`
 		<% else %>
 			<th><b><%= link_to admin_order_path(order) do %>
 			<i class="large red comment icon"></i>
