--- a/app/views/admin/comments/_form.html.erb
+++ b/app/views/admin/comments/_form.html.erb
@@ -1,10 +1,12 @@
 <%= form_with scope: :comment, url: [:admin, @order, @order.comments.build]  do |f| %>
-    <div>
-       <%= f.hidden_field :worker_id, :value => current_worker.id %>
-    </div>
-    <div>
-      Text: <%= f.text_area :body %>
-    </div>
-
-    <%= f.submit %>
+<div>
+	<%= f.hidden_field :worker_id, :value => current_worker.id %>
+</div>
+<div>
+	<%= f.text_area :body %>
+</div>
+<br>
+<div>
+	<%= f.submit 'Сохранить коментарии' %>
+</div>
 <% end %>
