--- a/app/views/admin/comments/create.js.erb
+++ b/app/views/admin/comments/create.js.erb
@@ -1,3 +1,3 @@
-$("#comments").append("<%= j render @comment %>");
+$("#comments_table tbody").append("<tr><%= j render @comment %></tr>");
 $("#comment_worker").val("");
 $("#comment_body").val("");
