--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -1,40 +1,26 @@
 <p id="notice"><%= notice %></p>
+<h1 class="text-info"><%= @order.product.name %></h1>
 
-<p>
-  <strong>Название продукта:</strong>
-  <%= @order.product.name %>
-</p>
-
-<p>
-  <strong>Имя заказчика:</strong>
-  <%= @order.client_name %>
-</p>
-
-<p>
-  <strong>Адрес:</strong>
-  <%= @order.client_addres %>
-</p>
-
-<p>
-  <strong>Способ доставки:</strong>
-  <%= @order.translated_delivery_type %>
-</p>
-
-<p>
-  <strong>Общая сумма:</strong>
-  <%= @order.total_price %>
-</p>
-
-<%= link_to 'Back', admin_orders_path %>
-
-<h2><%= link_to 'Comments', '#', id: 'comments-link' %></h2>
+<h2>Комментарии</h2>
 <div id="comment-section">
-  <ol id="comments">
-    <%= render @order.comments %>
-  </ol>
+	<table class="ui selectable celled table"	id="comments_table">
+		<thead>
+			<tr>
+				<th>Должность автора</th>
+				<th>Имя автора</th>
+				<th>Комментарии</th>
+				<th>Время создания</th>
+			</tr>
+		</thead>
+		<tbody>
+			<%= render @order.comments %>
+		</tbody>
+	</table>
 
-  <h3>Add a comment:</h3>
-  <%= render 'admin/comments/form' %>
+	<h3>Написать комментарии:</h3>
+	<%= render 'admin/comments/form' %>
 </div>
 <br>
 <%= link_to "Назад", admin_orders_path, class: "btn btn-info" %>
+
+
