--- a/app/views/admin/orders/index.html.erb
+++ b/app/views/admin/orders/index.html.erb
@@ -1,200 +1,207 @@
-<br>
-<br>
-<div class="ui stackable five column grid">
-	<div class="column">
-		<div>
-			<h3>Все заказы</h3>
+<div class="container">
+	<div class="ui stackable five column grid">
+		<div class="column">
 			<div>
-				<%= link_to "Все заказы", admin_orders_path, id: 'all_orders' %>
-				(<%= Order.all.count %>)<br>
-			</div>
-		</div>
-	</div>
-
-	<div class="column">
-		<div>
-			<H3>Оператор</H3>
-			<%= link_to "Новые", admin_orders_path(status:'new_order'), id: 'new_order' %>
-			(<%= Order.where(status: :new_order).count %>)<br>
-		</div>
-
-		<div>
-			<%= link_to "Выяснить", admin_orders_path(status:'find_out'), id: 'find_out' %>
-			(<%= Order.where(status: :find_out).count %>)<br>
-		</div>
-
-		<div>
-			<%= link_to "Отсроченный", admin_orders_path(status:'deferred'), id: 'deferred' %>
-			(<%= Order.where(status: :deferred).count %>)<br>
-		</div>
-
-	</div>
-
-	<div class="column">
-		<div>
-			<h3>Склад</h3>
-			<div>
-				<%= link_to "Подтверждённый", admin_orders_path(status:'confirmed'), id: 'confirmed' %>
-				(<%= Order.where(status: :confirmed).count %>)<br>
-			</div>
-
-			<div>
-				<%= link_to "Сборка заказа", admin_orders_path(status:'assemblage'), id: 'assemblage' %>
-				(<%= Order.where(status: :assemblage).count %>)<br>
-			</div>
-
-			<div>
-				<%= link_to "Подготовленный", admin_orders_path(status:'prepared'), id: 'prepared' %>
-				(<%= Order.where(status: :prepared).count %>)<br>
-			</div>
-
-			<div>
-				<%= link_to "Отправленный", admin_orders_path(status:'sent'), id: 'sent' %>
-				(<%= Order.where(status: :sent).count %>)<br>
-			</div>
-
-			<div>
-				<%= link_to "Врученный", admin_orders_path(status:'handed_in'), id: 'handed_in' %>
-				(<%= Order.where(status: :handed_in).count %>)<br>
-			</div>
-
-			<div>
-				<%= link_to "Вручен и оплачен", admin_orders_path(status:'handed_and_paid'), id: 'handed_and_paid' %>
-				(<%= Order.where(status: :handed_and_paid).count %>)<br>
-			</div>
-
-			<div>
-				<%= link_to "Возврат", admin_orders_path(status:'return'), id: 'return' %>
-				(<%= Order.where(status: :return).count %>)<br>
-			</div>
-
-			<div>
-				<%= link_to "Возврат получен", admin_orders_path(status:'refund_received'), id: 'refund_received' %>
-				(<%= Order.where(status: :refund_received).count %>)<br>
-			</div>
-		</div>
-	</div>
-
-	<div class="column">
-		<div>
-			<h3>Напоминания</h3>
-			<div>
-				<%= link_to "Доставлен", admin_orders_path(status:'delivered'), id: 'delivered' %>
-				(<%= Order.where(status: :delivered).count %>)<br>
-			</div>
-
-			<div>
-				<%= link_to "Напоминание 1", admin_orders_path(status:'reminder_1'), id: 'reminder_1' %>
-				(<%= Order.where(status: :reminder_1).count %>)<br>
-			</div>
-
-			<div>
-				<%= link_to "Напоминание 2", admin_orders_path(status:'reminder_2'), id: 'reminder_2' %>
-				(<%= Order.where(status: :reminder_2).count %>)<br>
-			</div>
-		</div>
-	</div>
-
-	<div class="column">
-		<div>
-			<h3>Проблемные</h3>
-			<div>
-				<%= link_to "Не подтверждён", admin_orders_path(status:'unconfirmed'), id: 'unconfirmed' %>
-				(<%= Order.where(status: :unconfirmed).count %>)<br>
-			</div>
-
-			<div>
-				<%= link_to "Отказ", admin_orders_path(status:'rejection'), id: 'rejection' %>
-				(<%= Order.where(status: :rejection).count %>)<br>
-			</div>
-
-			<div>
-				<%= link_to "Розыскивается", admin_orders_path(status:'wanted'), id: 'wanted' %>
-				(<%= Order.where(status: :wanted).count %>)<br>
-			</div>
-		</div>
-	</div>
-</div>
-<br>
-
-<div class="accordion" id="accordionExample">
-	<div class="card">
-		<div >
-			<h2 class="mb-0">
-				<div class="container">
-					<div class="row">
-						<button class="btn btn-primary col align-self-center" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-							Отображать заказы,удовлетворяющие следующим условиям
-						</button>
-					</div>
+				<h3>Все заказы</h3>
+				<div>
+					<%= link_to "Все заказы", admin_orders_path, id: 'all_orders' %>
+					(<%= Order.all.count %>)<br>
 				</div>
-			</h2>
+			</div>
 		</div>
 
-		<div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
-			<div class="container">
-				<%= render 'form' %>
+		<div class="column">
+			<div>
+				<H3>Оператор</H3>
+				<%= link_to "Новые", admin_orders_path(status:'new_order'), id: 'new_order' %>
+				(<%= Order.where(status: :new_order).count %>)<br>
+			</div>
+
+			<div>
+				<%= link_to "Выяснить", admin_orders_path(status:'find_out'), id: 'find_out' %>
+				(<%= Order.where(status: :find_out).count %>)<br>
+			</div>
+
+			<div>
+				<%= link_to "Отсроченный", admin_orders_path(status:'deferred'), id: 'deferred' %>
+				(<%= Order.where(status: :deferred).count %>)<br>
+			</div>
+
+		</div>
+
+		<div class="column">
+			<div>
+				<h3>Склад</h3>
+				<div>
+					<%= link_to "Подтверждённый", admin_orders_path(status:'confirmed'), id: 'confirmed' %>
+					(<%= Order.where(status: :confirmed).count %>)<br>
+				</div>
+
+				<div>
+					<%= link_to "Сборка заказа", admin_orders_path(status:'assemblage'), id: 'assemblage' %>
+					(<%= Order.where(status: :assemblage).count %>)<br>
+				</div>
+
+				<div>
+					<%= link_to "Подготовленный", admin_orders_path(status:'prepared'), id: 'prepared' %>
+					(<%= Order.where(status: :prepared).count %>)<br>
+				</div>
+
+				<div>
+					<%= link_to "Отправленный", admin_orders_path(status:'sent'), id: 'sent' %>
+					(<%= Order.where(status: :sent).count %>)<br>
+				</div>
+
+				<div>
+					<%= link_to "Врученный", admin_orders_path(status:'handed_in'), id: 'handed_in' %>
+					(<%= Order.where(status: :handed_in).count %>)<br>
+				</div>
+
+				<div>
+					<%= link_to "Вручен и оплачен", admin_orders_path(status:'handed_and_paid'), id: 'handed_and_paid' %>
+					(<%= Order.where(status: :handed_and_paid).count %>)<br>
+				</div>
+
+				<div>
+					<%= link_to "Возврат", admin_orders_path(status:'return'), id: 'return' %>
+					(<%= Order.where(status: :return).count %>)<br>
+				</div>
+
+				<div>
+					<%= link_to "Возврат получен", admin_orders_path(status:'refund_received'), id: 'refund_received' %>
+					(<%= Order.where(status: :refund_received).count %>)<br>
+				</div>
+			</div>
+		</div>
+
+		<div class="column">
+			<div>
+				<h3>Напоминания</h3>
+				<div>
+					<%= link_to "Доставлен", admin_orders_path(status:'delivered'), id: 'delivered' %>
+					(<%= Order.where(status: :delivered).count %>)<br>
+				</div>
+
+				<div>
+					<%= link_to "Напоминание 1", admin_orders_path(status:'reminder_1'), id: 'reminder_1' %>
+					(<%= Order.where(status: :reminder_1).count %>)<br>
+				</div>
+
+				<div>
+					<%= link_to "Напоминание 2", admin_orders_path(status:'reminder_2'), id: 'reminder_2' %>
+					(<%= Order.where(status: :reminder_2).count %>)<br>
+				</div>
+			</div>
+		</div>
+
+		<div class="column">
+			<div>
+				<h3>Проблемные</h3>
+				<div>
+					<%= link_to "Не подтверждён", admin_orders_path(status:'unconfirmed'), id: 'unconfirmed' %>
+					(<%= Order.where(status: :unconfirmed).count %>)<br>
+				</div>
+
+				<div>
+					<%= link_to "Отказ", admin_orders_path(status:'rejection'), id: 'rejection' %>
+					(<%= Order.where(status: :rejection).count %>)<br>
+				</div>
+
+				<div>
+					<%= link_to "Розыскивается", admin_orders_path(status:'wanted'), id: 'wanted' %>
+					(<%= Order.where(status: :wanted).count %>)<br>
+				</div>
 			</div>
 		</div>
 	</div>
-</div>
+	<br>
 
-<table class="ui selectable celled table">
-	<thead>
-		<tr>
-			<th>№</th>
-			<th>Название продукта</th>
-			<th>Имя</th>
-			<th>Телефон</th>
-			<th>Email</th>
-			<th>Адрес</th>
-			<th>Способ доставки</th>
-			<th>Цена заказа</th>
-			<th>Количество</th>
-			<th>Общая сумма</th>
-			<th>Статус</th>
-			<th>Комментарии</th>
-			<th colspan="2">Действия</th>
-		</tr>
-	</thead>
+	<div class="accordion" id="accordionExample">
+		<div class="card">
+			<div >
+				<h2 class="mb-0">
+					<div class="container">
+						<div class="row">
+							<button class="btn btn-primary col align-self-center" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+								Отображать заказы,удовлетворяющие следующим условиям
+							</button>
+						</div>
+					</div>
+				</h2>
+			</div>
 
-	<% if @orders.present? %> 
-	<% @orders.each_with_index do |order, index| %>
+			<div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
+				<div class="container">
+					<%= render 'form' %>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="scroll" style="overflow: scroll;">
+	<table class="table table-bordered pt-5 mt-5">
+		<thead>
+			<tr>
+				<th>№</th>
+				<th>Название продукта</th>
+				<th>Имя</th>
+				<th>Телефон</th>
+				<th>Email</th>
+				<th>Адрес</th>
+				<th>Способ доставки</th>
+				<th>Цена заказа</th>
+				<th>Количество</th>
+				<th>Общая сумма</th>
+				<th>Статус</th>
+				<th>Комментарии</th>
+				<th colspan="2">Действия</th>
+			</tr>
+		</thead>
 
-	<tr>
-		<th><b><%= index += 1 %></b></th>
-		<th><b><%= order.product.name %></b></th>
-		<th><b><%= order.client_name  %></b></th>
-		<th><b><%= order.client_phone %></b></th>
-		<th><b><%= order.client_email %></b></th>
-		<th><b><%= order.client_addres %></b></th>
-		<th><b><%= order.translated_delivery_type %></b></th>
-		<th><b><%= order.order_price %></b></th>
-		<th><b><%= order.quantity %></b></th>
-		<th><b><%= order.total_price %></b></th>
-		<th><b><%= order.translated_status %></b></th>
-        <% if order.comments.present?%>
-			<th><b><%= link_to admin_order_path(order) do %>
-			<i class="large green comment icon"></i>
-			<% end %></b></th>`
-		<% else %>
-			<th><b><%= link_to admin_order_path(order) do %>
-			<i class="large red comment icon"></i>
-			<% end %></b></th>
-		<% end %>
-		<% if worker_signed_in? %>
-		<% if current_worker.edit_order_access_is_given? == true %>
-		<th><%= link_to edit_admin_order_path(order) do %>
-			<i class="large edit icon"></i>
-			<% end%>	
-			<% end%>
-			<% if current_worker.destroy_order_access_is_given? == true %>
-			<%= link_to admin_order_path(order), data: { confirm: 'Вы уверены?' },method: :delete 	 do %>
-			<i class="circular inverted red trash alternate outline icon"></i>
-			<% end %></th>
-			<% end%>
-			<% end %>
-		</tr>
+		<% if @orders.present? %> 
+		<% @orders.each_with_index do |order, index| %>
+		<tbody>
+			<tr>
+				<td><b><%= index += 1 %></b></td>
+				<td><b><%= order.product.name %></b></td>
+				<td><b><%= order.client_name  %></b></td>
+				<td><b><%= order.client_phone %></b></td>
+				<td><b><%= order.client_email %></b></td>
+				<td><b><%= order.client_addres %></b></td>
+				<td><b><%= order.translated_delivery_type %></b></td>
+				<td><b><%= order.order_price %></b></td>
+				<td><b><%= order.quantity %></b></td>
+				<td><b><%= order.total_price %></b></td>
+				<td><b><%= order.translated_status %></b></td>
+
+				<% if order.comments.present? %>
+				<td><b><%= link_to order.comments.last.body, admin_order_path(order) %></b></td>
+				<% else %>
+				<td>
+					<%= link_to admin_order_path(order) do %>
+					<b class="text-danger">Нет комментариев!</b>
+					<% end%>
+				</td>
+				<% end %>
+
+				<% if worker_signed_in? %>
+				<% if current_worker.edit_order_access_is_given? == true %>
+				<td>
+					<%= link_to edit_admin_order_path(order) do %>
+					<i class="large edit icon"></i>
+					<% end%>	
+					<% end%>
+					<% if current_worker.destroy_order_access_is_given? == true %>
+					<%= link_to admin_order_path(order), data: { confirm: 'Вы уверены?' },method: :delete 	 do %>
+					<i class="circular inverted red trash alternate outline icon"></i>
+					<% end %>
+				</td>
+				<% end%>
+				<% end %>
+			</tr>
+		</tbody>
 		<% end %>
 		<% end %>
 	</table>
+	</div>
+</div>
+
