--- a/app/views/admin/orders/index.html.erb
+++ b/app/views/admin/orders/index.html.erb
@@ -145,7 +145,7 @@
 				<th>Название продукта</th>
 				<th>Имя</th>
 				<th>Телефон</th>
-				<th>Абра кадабра</th>
+				<th>Email</th>
 				<th>Адрес</th>
 				<th>Способ доставки</th>
 				<th>Цена заказа</th>
