--- a/app/views/admin/orders/index.html.erb
+++ b/app/views/admin/orders/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<%# <div class="container"> %>
 	<div class="ui stackable five column grid">
 		<div class="column">
 			<div>
@@ -137,7 +137,8 @@
 			</div>
 		</div>
 	</div>
-	<div class="scroll" style="overflow: scroll;">
+	</div>
+	<%# <div class="scroll" style="overflow: scroll;"> %>
 	<table class="table table-bordered pt-5 mt-5">
 		<thead>
 			<tr>
@@ -202,6 +203,5 @@
 		<% end %>
 		<% end %>
 	</table>
-	</div>
-</div>
+<%# </div> %>
 
