--- a/app/views/admin/orders/index.html.erb
+++ b/app/views/admin/orders/index.html.erb
@@ -143,10 +143,14 @@
 		<thead>
 			<tr>
 				<th>№</th>
-				<th>Название продукта</th>
+				<%# <th>Название продукта</th>
 				<th>Имя</th>
 				<th>Телефон</th>
-				<th>Email</th>
+				<th>Email</th> %>
+				<th>Пам</th>
+				<th>Пом</th>
+				<th>Пум</th>
+				<th>Пим</th>
 				<th>Адрес</th>
 				<th>Способ доставки</th>
 				<th>Цена заказа</th>
