--- a/app/views/admin/orders/index.html.erb
+++ b/app/views/admin/orders/index.html.erb
@@ -147,10 +147,10 @@
 				<th>Имя</th>
 				<th>Телефон</th>
 				<th>Email</th> %>
-				<th>Пам</th>
-				<th>Пом</th>
-				<th>Пум</th>
-				<th>Пим</th>
+				<th class="text-danger">Пам</th>
+				<th class="text-danger">Пом</th>
+				<th class="text-danger">Пум</th>
+				<th class="text-danger">Пим</th>
 				<th>Адрес</th>
 				<th>Способ доставки</th>
 				<th>Цена заказа</th>
