--- a/app/views/admin/orders/index.html.erb
+++ b/app/views/admin/orders/index.html.erb
@@ -143,14 +143,14 @@
 		<thead>
 			<tr>
 				<th>№</th>
-				<%# <th>Название продукта</th>
+				<th>Название продукта</th>
 				<th>Имя</th>
 				<th>Телефон</th>
-				<th>Email</th> %>
-				<th class="text-danger">Пам</th>
+				<th>Email</th>
+				<%# <th class="text-danger">Пам</th>
 				<th class="text-danger">Пом</th>
 				<th class="text-danger">Пум</th>
-				<th class="text-danger">Пим</th>
+				<th class="text-danger">Пим</th> %>
 				<th>Адрес</th>
 				<th>Способ доставки</th>
 				<th>Цена заказа</th>
