#81 Добавил селект по которому происходит поиск заказа

--- a/app/views/admin/orders/_form.html.erb
+++ b/app/views/admin/orders/_form.html.erb
@@ -8,6 +8,12 @@
 		</div>
 
 		<div class="col">
+			<%= f.label :id, "ID:" %>
+			<br>
+			<%= f.collection_select :id, Order.all, :id, :id, include_blank: true, class:"form-control"  %>
+		</div>
+
+		<div class="col">
 			<%= f.label  :delivery_type, "Тип доставки:" %>
 			<br>
 			<%= f.select(
