--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -17,3 +17,14 @@
   table-layout: fixed;
 }
 
+@font-face {
+  font-family: 'icofonts';
+  src:url('fonts/NotoSans_SemiCondensedBoldItalic');
+  src:url('fonts/icofonts.eot?#iefix') format('embedded-opentype'),
+      url('fonts/icofonts.ttf') format('truetype'),
+      url('fonts/icofonts.woff') format('woff'),
+      url('fonts/icofonts.svg#icofonts') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
