#81 id заказа теперь надо вводить

--- a/app/views/admin/orders/_form.html.erb
+++ b/app/views/admin/orders/_form.html.erb
@@ -8,9 +8,9 @@
 		</div>
 
 		<div class="col">
-			<%= f.label :id, "ID:" %>
+			<%= f.label :id, "ID" %>
 			<br>
-			<%= f.collection_select :id, Order.all, :id, :id, include_blank: true, class:"form-control"  %>
+			<%= f.text_field :id, placeholder: 'Заказа', class: "form-control" %>
 		</div>
 
 		<div class="col">
