--- a/app/views/admin/products/_form.html.erb
+++ b/app/views/admin/products/_form.html.erb
@@ -28,6 +28,10 @@
       <%= f.text_area :description, placeholder: 'Описание' %><br>
     </div><br>
 
+    <div class="field">
+      <%= f.select :landing_id, Landing.all.collect { |p| [ p.name, p.id ] }, include_blank: true %><br><br>
+    </div>
+
     <div>
       <%= f.submit "Подтвердить",class:"ui teal button" %>
     </div>
