--- a/app/views/admin/orders/index.html.erb
+++ b/app/views/admin/orders/index.html.erb
@@ -145,6 +145,7 @@
 				<tr>
 					<th>ID</th>
 					<th>Название продукта</th>
+					<th class="text-danger">BOM</th>
 					<th>Имя</th>
 					<th>Телефон</th>
 					<th>Распечатать</th>
