--- a/app/views/admin/orders/status.html.erb
+++ b/app/views/admin/orders/status.html.erb
@@ -1,18 +1,4 @@
-<h1>ОБЩАЯ СТАТИСТИКА</h1>
-
-<table class="ui selectable celled table">
-    <tr>
-      <th>Период</th>
-      <th>Заказы</th>
-      <th>Оплачено заказов на сумму</th>
-    </tr>
-
-    <tr>
-	  	<td>Сегодня</td>
-	  	<td></td>
-	  	<td></td>
-    </tr>
-</table>
+<h1 class="welcome">Добро пожаловать!</h1>
 
 
 
