Реализовал вывод даты создания заказа в таблице order/index

--- a/app/views/admin/orders/index.html.erb
+++ b/app/views/admin/orders/index.html.erb
@@ -145,7 +145,7 @@
 				<tr>
 					<th>ID</th>
 					<th>Название продукта</th>
-					<!-- <th class="text-danger">BOM</th> -->
+					<th>Дата поступления</th>
 					<th>Имя</th>
 					<th>Телефон</th>
 					<th>Распечатать</th>
@@ -166,6 +166,7 @@
 				<tr>
 					<td><b><%= order.id %></b></td>
 					<td><b><%= order.product .name %></b></td>
+					<td><b><%= order.created_at.localtime.strftime("%d.%m.%Y  %H:%M") %></b></td>
 					<td><b><%= order.client_name  %></b></td>
 					<td><b><%= order.client_phone %></b></td>
 					<td><b><%= link_to "Накладная(PDF)", admin_order_path(order, format: 'pdf') %></b></td>
