#86 реализовал редактирование товара в заказе

--- a/app/views/admin/orders/edit.html.erb
+++ b/app/views/admin/orders/edit.html.erb
@@ -25,7 +25,7 @@
 
       <div class="field">
         <%= f.label 'Email' %>
-        <%= f.email_field :client_email, placeholder: 'Выяснить' %><br>
+        <%= f.text_field :client_email, placeholder: 'Выяснить' %><br>
       </div>
 
       <div class="field">
@@ -56,6 +56,11 @@
       <div class="field">
         <%= f.label 'Статус' %>
         <%= f.select( :status, options_for_select(current_worker.role.order_statuses.map{ |s| [s.translate_ru, s.title] }) ) %>
+      </div>
+
+      <div class="field">
+        <%= f.label 'Товар' %>
+        <%= f.collection_select :product_id, @products, :id, :name, include_blank: true, class:"form-control"  %>
       </div>
 
       <div><br>
