--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -10,6 +10,7 @@
 				<th>Имя автора</th>
 				<th>Комментарии</th>
 				<th>Время создания</th>
+				<th>Удаление</th>
 			</tr>
 		</thead>
 		<tbody>
