--- a/app/views/admin/orders/index.html.erb
+++ b/app/views/admin/orders/index.html.erb
@@ -188,13 +188,13 @@
 					<% end %>
 
 					<% if worker_signed_in? %>
-					<% if current_worker.edit_order_access_is_given? == true %>
+					<% if current_worker.access_is_given?('order', 'edit') %>
 					<td>
 						<%= link_to edit_admin_order_path(order) do %>
 						<i class="large edit icon"></i>
 						<% end%>
 						<% end%>
-						<% if current_worker.destroy_order_access_is_given? == true %>
+						<% if current_worker.access_is_given?('order', 'destroy') %>
 						<%= link_to admin_order_path(order), data: { confirm: 'Вы уверены?' },method: :delete, id: "order/#{order.id}" 	 do %>
 						<i class="circular inverted red trash alternate outline icon"></i>
 						<% end %>
