--- a/app/views/admin/products/show.html.erb
+++ b/app/views/admin/products/show.html.erb
@@ -3,7 +3,7 @@
     <%= image_tag @product.picture, size: 300 %><br><br>
 <% end %>
 <%= @product.description %><br><br><hr>
-<% if current_worker.edit_product_access_is_given? %>
+<% if current_worker.access_is_given?('product', 'edit') %>
     <%= link_to "Редактировать", edit_admin_product_path(@product), class:"ui teal basic button" %>
 <% end %>
     <%= link_to "Назад", admin_products_path, class:"ui blue basic button" %>
