--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -1,5 +1,5 @@
 <h1>Товары</h1>
-<% if current_worker.new_product_access_is_given? %>
+<% if current_worker.access_is_given?('product', 'new') %>
 	<%= link_to 'Создать новый товар', new_admin_product_path, class:"ui positive basic button" %>
 <% end %>
 
@@ -17,7 +17,7 @@
 		<th>Изображение</th>
 		<th>Название</th>
 		<th>Цена</th>
-		<% if current_worker.show_product_access_is_given? %>
+		<% if current_worker.access_is_given?('product', 'show') %>
 			<th colspan="3">Действия</th>
 		<% end %>
 	</tr>
@@ -30,7 +30,7 @@
 				<% end %>
 			<% end %>
 		</td>
-		<% if current_worker.show_product_access_is_given? %>
+		<% if current_worker.access_is_given?('product', 'show') %>
 			<td>
 				<h3>
 					<%= link_to product.name, admin_product_path(product) %>
@@ -49,12 +49,12 @@
 			</strong>
 		</td>
 		<td>
-			<% if current_worker.duplicate_product_access_is_given? || current_worker.admin? %>
+			<% if current_worker.access_is_given?('product', 'duplicate') %>
 				<%= link_to admin_duplicate_path(product), data: { confirm: 'Вы уверены?' },method: :post do %>
 					<i class="large circular teal inverted copy outline icon"></i>
 				<% end %>
 			<% end %>
-			<% if current_worker.destroy_product_access_is_given? %>
+			<% if current_worker.access_is_given?('product', 'destroy') %>
 				<%= link_to admin_product_path(product), data: { confirm: 'Вы уверены?' },method: :delete do %>
 					<i class="large circular inverted red trash alternate outline icon"></i>
 				<% end %>
