--- a/app/views/admin/orders/index.html.erb
+++ b/app/views/admin/orders/index.html.erb
@@ -143,7 +143,7 @@
 		<table class="table table-bordered pt-5 mt-5">
 			<thead>
 				<tr>
-					<th>ID</th>
+					<th>Хер</th>
 					<th>Название продукта</th>
 					<th>Дата поступления</th>
 					<th>Имя</th>
