--- a/app/views/admin/orders/edit.html.erb
+++ b/app/views/admin/orders/edit.html.erb
@@ -60,7 +60,9 @@
 
       <div class="field">
         <%= f.label 'Товар' %>
-        <%= f.collection_select :product_id, @products, :id, :name, include_blank: true, class:"form-control"  %>
+        <% if @product.present? %>
+          <%= f.collection_select :product_id, @products, :id, :name, include_blank: true, class:"form-control" %>
+        <% end %>
       </div>
 
       <div><br>
