--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,12 @@
   <p class="notice"><%= notice %></p>
   <p class="alert"><%= alert %></p>
   <div class="container">
+    <% flash.each do |key, message| %>
+      <div class="<%= flash_class(key) %>">
+        <%= message %>
+      </div>
+    <% end %>
+
     <%= yield %>
   </div>
 </body>
