Поменял название Лэндингов на Магазины

--- a/app/views/layouts/admin/_navbar.html.erb
+++ b/app/views/layouts/admin/_navbar.html.erb
@@ -32,7 +32,7 @@
 
         <% if current_worker.access_is_given?('landing', 'index') %>
         <strong>
-          <%= link_to 'Лендинги', admin_landings_path, :class => "text-light" %>&nbsp;&nbsp;
+          <%= link_to 'Магазины', admin_landings_path, :class => "text-light" %>&nbsp;&nbsp;
         </strong>
         <% end %>
       </ul>
