Изменил чуть дизайн

--- a/app/views/admin/landings/_form.html.erb
+++ b/app/views/admin/landings/_form.html.erb
@@ -13,22 +13,27 @@
       <% end %>
 
       <p>
+        <%= f.label "Название" %>
         <%= f.text_field :name, placeholder: 'Название' %>
       </p>
 
       <p>
+        <%= f.label "Описание" %>
         <%= f.text_field :description, placeholder: 'Описание' %>
       </p>
 
       <p>
+        <%= f.label "Адрес" %>
         <%= f.text_field :address, placeholder: 'Адрес' %>
       </p>
 
       <p>
+        <%= f.label "Организация" %>
         <%= f.text_field :organization, placeholder: 'Организация' %>
       </p>
 
       <p>
+        <%= f.label "Владелец" %>
         <%= f.text_field :owner, placeholder: 'Владелец' %>
       </p>
 
