--- a/app/views/admin/landings/edit.html.erb
+++ b/app/views/admin/landings/edit.html.erb
@@ -1,2 +1,2 @@
-<h2 class="ui dividing header">Редактировать лендинг</h2><br>
+<h2 class="ui dividing header">Редактировать магазин</h2><br>
 <%= render 'form' %>
