--- a/app/views/admin/orders/index.html.erb
+++ b/app/views/admin/orders/index.html.erb
@@ -143,7 +143,7 @@
 		<table class="table table-bordered pt-5 mt-5">
 			<thead>
 				<tr>
-					<th>Хер</th>
+					<th>ID</th>
 					<th>Название продукта</th>
 					<th>Дата поступления</th>
 					<th>Имя</th>
@@ -195,7 +195,7 @@
 					<% if current_worker.access_is_given?('order', 'edit') %>
 					<td>
 						<%= link_to edit_admin_order_path(order) do %>
-							<i class="circular inverted teal edit icon"></i>
+							<i class="circular inverted circular inverted teal edit icon"></i>
 						<% end%>
 						<% end%>
 
