--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,9 +1,9 @@
-<h2>Sign up</h2>
+<h2>Зарегистрироваться</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
-   <div class="field">
+  <div class="field">
     <%= f.label :nickname %><br />
     <%= f.text_field :nickname %>
   </div>
@@ -27,7 +27,7 @@
   </div>
 
   <div class="actions">
-    <%= f.submit "Sign up" %>
+    <%= f.submit "Зарегестрироваться" %>
   </div>
 <% end %>
 
