В select способ достовки добавлен пустой бланк

--- a/app/views/admin/orders/edit.html.erb
+++ b/app/views/admin/orders/edit.html.erb
@@ -42,7 +42,7 @@
         <%= f.select(
             :delivery_type, options_for_select(
               Order.translated_delivery_types.map{ |delivery| [ delivery[0], delivery[1] ] }
-            )
+            ), include_blank: true
           )
         %>
       </div>
