Изменил вьюху orders/edit

--- a/app/views/admin/orders/edit.html.erb
+++ b/app/views/admin/orders/edit.html.erb
@@ -55,7 +55,7 @@
 
       <div class="field">
         <%= f.label 'Статус' %>
-        <%= f.select( :status, options_for_select(current_worker.role.order_statuses.map{ |s| [s.translate_ru, s.title] }) ) %>
+        <%= f.select( :status, options_for_select(current_worker.role.order_statuses.map{ |s| [s.translate_ru, s.title] }) , include_blank: true )%>
       </div>
 
       <div class="field">
