--- a/app/views/layouts/application/_navbar.html.erb
+++ b/app/views/layouts/application/_navbar.html.erb
@@ -1,3 +1,4 @@
+Айбек Абенов, [03.04.19 16:07]
 <nav class="navbar fixed-top navbar-light bg-primary navbar-expand-md">
     <div class="container">
         <button type="button" class="navbar-toggler collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
