--- a/app/views/admin/orders/index.html.erb
+++ b/app/views/admin/orders/index.html.erb
@@ -143,12 +143,12 @@
 		<table class="table table-bordered pt-5 mt-5">
 			<thead>
 				<tr>
-					<th>бум</th>
+					<!-- <th>бум</th>
 					<th>бом</th>
-					<th>бим</th>
-					<!-- <th>ID</th>
+					<th>бим</th> -->
+					<th>ID</th>
 					<th>Название продукта</th>
-					<th>Дата поступления</th> -->
+					<th>Дата поступления</th>
 					<th>Имя</th>
 					<th>Телефон</th>
 					<th>PDF</th>
