--- a/app/views/admin/orders/index.html.erb
+++ b/app/views/admin/orders/index.html.erb
@@ -143,9 +143,9 @@
 		<table class="table table-bordered pt-5 mt-5">
 			<thead>
 				<tr>
-					<!-- <th>бум</th>
-					<th>бом</th>
-					<th>бим</th> -->
+					<!-- <th class="text-danger">бум</th>
+					<th class="text-danger">бом</th>
+					<th class="text-danger">бим</th> -->
 					<th>ID</th>
 					<th>Название продукта</th>
 					<th>Дата поступления</th>
