--- a/app/views/admin/orders/index.html.erb
+++ b/app/views/admin/orders/index.html.erb
@@ -143,12 +143,12 @@
 		<table class="table table-bordered pt-5 mt-5">
 			<thead>
 				<tr>
-					<!-- <th>ID</th>
+					<th>ID</th>
 					<th>Название продукта</th>
-					<th>Дата поступления</th> -->
-					<th class="text-danger">BOM</th>
+					<th>Дата поступления</th>
+					<!-- <th class="text-danger">BOM</th>
 					<th class="text-danger">BIM</th>
-					<th class="text-danger">BUM</th>
+					<th class="text-danger">BUM</th> -->
 					<th>Имя</th>
 					<th>Телефон</th>
 					<th>PDF</th>
