--- a/app/views/admin/orders/edit.html.erb
+++ b/app/views/admin/orders/edit.html.erb
@@ -5,7 +5,7 @@
 <h2>Цена в магазине: <%= @order.product.price %></h2>
 
 <div class="ui form">
-  <div class="fields">
+  <div class="fields w-25">
     <%= form_with model: [:admin, @order], local: true do |f| %>
       <% if @order.errors.any? %>
         <div class="errors">
@@ -64,7 +64,7 @@
 
       <div class="field">
         <%= f.label 'Товар' %>
-        <%= f.collection_select :product_id, @order.product.landing.products, :id, :name, include_blank: true, class:"form-control" %>
+        <%= f.collection_select :product_id, @order.product.landing.products, :id, :description, include_blank: true, class:"form-control" %>
       </div>
 
       <div><br>
